<resources>
    <string name="app_name">Pick Me Up !</string>
    <string name="feedback">feedback</string>
    <string name="agenda_pick_me_up">Agenda Pick Me UP</string>
    <string name="tambah_konten_animasi">tambah konten animasi</string>
    <string name="list_konten_animasi">Konten Edukasi</string>
    <string name="deskripsi">deskripsi</string>
    <string name="judul">Judul</string>
    <string name="todo">TODO</string>
    <string name="_0">0 %</string>
    <string name="register">DAFTAR</string>
    <string name="login">MASUK</string>
    <string name="email">Email atau Username</string>
    <string name="belum_punya_akun_silahkan_daftar">Belum Punya Akun ? Silahkan Daftar</string>
    <string name="password">Password</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="subscribe_to_news">Subscribe to news</string>
    <string name="log_token">Log token</string>
    <string name="default_notification_channel_name">News</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="permission_dialog" />
    <string name="go_to_permissions_settings" />
</resources>
