<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="@drawable/radius"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/ivGambar"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tvNamaKonten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/ivGambar"
                android:text="@string/judul"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDeskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNamaKonten"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/ivGambar"
                android:text="@string/deskripsi"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        </RelativeLayout>


</LinearLayout>