<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bgs"
        tools:context=".Masuk"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="145dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/radius"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="18dp"
            android:id="@+id/relativeLayout">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                    <EditText
                        android:textColor="@color/black"
                        android:id="@+id/email"
                        android:layout_marginTop="15dp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/username"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />


                    <EditText
                        android:textColor="@color/black"
                        android:id="@+id/paswword"
                        android:layout_marginTop="15dp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/lock"
                        android:hint="@string/password"
                        android:inputType="textPassword" />


                <Button
                    android:id="@+id/tombolmasuk"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/radius4"
                    android:text="@string/login"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/belum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:text="@string/belum_punya_akun_silahkan_daftar"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/tomboldaftar"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/radius4"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profils"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:src="@drawable/logoaplikasi"
            />

    </RelativeLayout>
</ScrollView>